--- a/PyhonNeuralNet.ipynb
+++ b/PyhonNeuralNet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 179,
    "metadata": {
     "collapsed": true
    },
@@ -29,14 +29,19 @@
     "def make_sigmoid_prime(x):\n",
     "    return x*(1-x)\n",
     "\n",
-    "def trainNeuralNet(synapse0, synapse1, epochs):\n",
+    "def trainNeuralNet(synapse0, synapse1, epochs, activator, activator_prime):\n",
     "    for j in range(epochs):\n",
-    "        l1 = sigmoid(np.dot(X,synapse0))\n",
-    "        l2 = sigmoid(np.dot(l1,synapse1))\n",
-    "        l2_delta = (y - l2)*make_sigmoid_prime(l2)\n",
-    "        l1_delta = l2_delta.dot(synapse1.T) * make_sigmoid_prime(l1)\n",
+    "        l1 = activator(np.dot(X,synapse0))\n",
+    "        l2 = activator(np.dot(l1,synapse1))\n",
+    "        l2_delta = (y - l2)*activator_prime(np.dot(l1,synapse1))\n",
+    "        l1_delta = l2_delta.dot(synapse1.T) * activator_prime(np.dot(X,synapse0))\n",
     "        synapse1 += l1.T.dot(l2_delta) #adjust our synapses up or down as necessary\n",
-    "        synapse0 += X.T.dot(l1_delta)\n"
+    "        synapse0 += X.T.dot(l1_delta)\n",
+    "\n",
+    "        \n",
+    "def transformTestData(x, syn0, syn1, func):\n",
+    "    layer1_transform = func(np.dot(x,syn0))\n",
+    "    return func(np.dot(layer1_transform,syn1))"
    ]
   },
   {
@@ -48,18 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE:  0.0114725639859\n",
-      "Output of predicted y (2nd and 3rd rows should be 1):  [[ 0.09335549]\n",
-      " [ 0.95700552]\n",
-      " [ 0.91362687]\n",
-      " [ 0.0701501 ]]\n"
+      "MSE:  0.000477306752279\n",
+      "Output of predicted y (2nd and 3rd rows should be close to 1):\n",
+      "[[ 0.01869055]\n",
+      " [ 0.98941286]\n",
+      " [ 0.98293159]\n",
+      " [ 0.0142077 ]]\n"
      ]
     }
    ],
@@ -73,52 +79,65 @@
     "np.random.seed(seed=42)\n",
     "syn0 = 2*np.random.random((X.shape[1],X.shape[0])) - 1\n",
     "syn1 = 2*np.random.random((y.shape[0],y.shape[1])) - 1\n",
-    "epochs = 1000\n",
+    "epochs = 10000\n",
     "\n",
-    "trainNeuralNet(syn0, syn1, epochs)\n",
+    "trainNeuralNet(syn0, syn1, epochs, lambda x: sigmoid(x), lambda x: sigmoid(x)*(1-sigmoid(x)))\n",
     "\n",
-    "layer1_transform = sigmoid(np.dot(X,syn0))\n",
-    "result = sigmoid(np.dot(layer1_transform,syn1))\n",
+    "result = transformTestData(X,syn0,syn1,lambda x: sigmoid(x))\n",
+    "# layer1_transform = sigmoid(np.dot(X,syn0))\n",
+    "# result = sigmoid(np.dot(layer1_transform,syn1))\n",
     "\n",
     "print(\"MSE: \",0.5*np.sum((y - result)**2))\n",
-    "print(\"Output of predicted y (2nd and 3rd rows should be 1): \",result)\n"
+    "print(\"Output of predicted y (2nd and 3rd rows should be close to 1):\")\n",
+    "print(result)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looks good.  Now lets load our accute inflamation dataset."
+    "Looks good.  Now lets load our accute inflamation dataset.  Our dataset was randomized.   It contained 120 rows and we split 80/20 for train&validation(96) / test(24).  We'll use scikit learn's KFold utility class to get our indices for a 5 k-fold cross validation and pick the best model to run our test data against."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE:  5.39454610192e-07\n",
-      "MSE:  5.16238558606e-06\n",
-      "MSE:  3.31410895478e-06\n",
-      "MSE:  3.60183408064e-07\n",
-      "MSE:  7.61713710947e-06\n"
+      "Performing K-fold cross validation, splits = 5\n",
+      "    MSE:  4.49999997067\n",
+      "    MSE:  2.99999982413\n",
+      "    MSE:  0.999999969645\n",
+      "    MSE:  0.999999960494\n",
+      "    MSE:  1.50000074508\n",
+      "\n",
+      "MSE against Test data:  1.9999999116\n",
+      "Accuracy:  0.833333333333\n"
      ]
     }
    ],
    "source": [
     "# X,y = getData('data/prepared/dataWithTemp.csv')\n",
     "\n",
-    "df = pd.read_csv('data/prepared/dataWithTemp.csv',sep=',',names=[\"Temp\", \"Nausea\", \"Lumbar\", \"Pushing\",\"Micturition\",\"Burning\",\"BladderInflamation\"]);\n",
+    "df = pd.read_csv('data/prepared/dataWithTempRandomized.train.csv',sep=',',names=[\"Temp\", \"Nausea\", \"Lumbar\", \"Pushing\",\"Micturition\",\"Burning\",\"BladderInflamation\"]);\n",
     "df[\"Temp\"] = df.transform(lambda x: x - 37)\n",
     "\n",
     "X,y = splitInputOutput(df.as_matrix())\n",
     "\n",
     "kf = KFold(n_splits=5,random_state=None, shuffle=True)\n",
     "\n",
+    "lowest_mse = 1e8 #arbitrary high value\n",
+    "lowest_syn0 = []\n",
+    "lowest_syn1 = []\n",
     "\n",
+    "epochs = 10000\n",
+    "\n",
+    "print(\"Performing K-fold cross validation, splits = 5\")\n",
+    "# do our cross validation with training data\n",
     "for train_index, test_index in kf.split(X):\n",
     "    X_train, X_test = X[train_index], X[test_index]\n",
     "    y_train, y_test = y[train_index], y[test_index]\n",
@@ -126,13 +145,30 @@
     "    np.random.seed(seed=42)\n",
     "    syn0 = 2*np.random.random((X_train.shape[1],X_train.shape[0])) - 1\n",
     "    syn1 = 2*np.random.random((y_train.shape[0],y_train.shape[1])) - 1\n",
-    "    epochs = 10000\n",
     "\n",
-    "    trainNeuralNet(syn0, syn1, epochs)\n",
+    "    trainNeuralNet(syn0, syn1, epochs, lambda x: sigmoid(x), lambda x: sigmoid(x)*(1-sigmoid(x)))\n",
     "\n",
     "    layer1_transform = sigmoid(np.dot(X_test,syn0))\n",
     "    result = sigmoid(np.dot(layer1_transform,syn1))\n",
-    "    print(\"MSE: \",0.5*np.sum((y_test - result)**2))\n"
+    "    mse = 0.5*np.sum((y_test - result)**2)\n",
+    "    print(\"    MSE: \",mse)\n",
+    "    if (mse < lowest_mse):\n",
+    "        lowest_mse = mse\n",
+    "        lowest_syn0 = syn0\n",
+    "        lowest_syn1 = syn1\n",
+    "        \n",
+    "df = pd.read_csv('data/prepared/dataWithTempRandomized.test.csv',sep=',',names=[\"Temp\", \"Nausea\", \"Lumbar\", \"Pushing\",\"Micturition\",\"Burning\",\"BladderInflamation\"]);\n",
+    "df[\"Temp\"] = df.transform(lambda x: x - 37)\n",
+    "\n",
+    "X,y = splitInputOutput(df.as_matrix())\n",
+    "layer1_transform = sigmoid(np.dot(X,lowest_syn0))\n",
+    "result = sigmoid(np.dot(layer1_transform,lowest_syn1))\n",
+    "mse = 0.5*np.sum((y - result)**2)\n",
+    "result = np.double(result > 0.5)\n",
+    "print()\n",
+    "print(\"MSE against Test data: \",mse)\n",
+    "print(\"Accuracy: \",1-np.sum(y-result)/y.shape[0])\n",
+    "\n"
    ]
   },
   {
