Making array version of neural net

--- a/PyhonNeuralNet.ipynb
+++ b/PyhonNeuralNet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -29,6 +29,7 @@
     "def make_sigmoid_prime(x):\n",
     "    return x*(1-x)\n",
     "\n",
+    "# Trivial implementation\n",
     "def trainNeuralNet(synapse0, synapse1, epochs, activator, activator_prime):\n",
     "    for j in range(epochs):\n",
     "        l1 = activator(np.dot(X,synapse0))\n",
@@ -38,6 +39,29 @@
     "        synapse1 += l1.T.dot(l2_delta) #adjust our synapses up or down as necessary\n",
     "        synapse0 += X.T.dot(l1_delta)\n",
     "\n",
+    "# Now do it with arrays to generalize it a bit more\n",
+    "def trainNeuralNetArrays(weights, epochs, activator, activator_prime):\n",
+    "    n = len(weights)\n",
+    "    layers = [None] * n\n",
+    "    deltas = [None] * n\n",
+    "    for j in range(epochs):\n",
+    "        for i in range(n):\n",
+    "            if i == 0: # Push our input into the first weight\n",
+    "                layers[i] = activator(np.dot(X,weights[i]))\n",
+    "            else: # Push previous layer into current later using weights_i\n",
+    "                layers[i] = activator(np.dot(layers[i-1],weights[i]))\n",
+    "        for i in reversed(range(n)):\n",
+    "            if i == n-1: # The delta closest to our output is (y-t) -- or \"y - layers[i]\" in this case\n",
+    "                deltas[i] = (y - layers[i])*activator_prime(np.dot(layers[i-1],weights[i]))\n",
+    "            elif i > 0: # While were not the first or last delta use the d_i+1, weights_i+1, layers_i-1, weights_i\n",
+    "                deltas[i] = deltas[i+1].dot(weights[i+1].T)*activator_prime(np.dot(layers[i-1],weights[i]))\n",
+    "            else: # update d_0 using X instead of one of the layers\n",
+    "                deltas[i] = deltas[i+1].dot(weights[i+1].T)*activator_prime(np.dot(X,weights[i]))\n",
+    "        for i in reversed(range(n)): # Back propagation time, start at the last weight and move forward\n",
+    "            if i != 0:  # testing !=0 so show we backpropogate back to front {else statement}\n",
+    "                weights[i] += layers[i-1].T.dot(deltas[i])\n",
+    "            else:\n",
+    "                weights[i] += X.T.dot(deltas[i])\n",
     "        \n",
     "def transformTestData(x, syn0, syn1, func):\n",
     "    layer1_transform = func(np.dot(x,syn0))\n",
@@ -53,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,9 +103,11 @@
     "np.random.seed(seed=42)\n",
     "syn0 = 2*np.random.random((X.shape[1],X.shape[0])) - 1\n",
     "syn1 = 2*np.random.random((y.shape[0],y.shape[1])) - 1\n",
+    "synapses = [syn0, syn1]\n",
     "epochs = 10000\n",
     "\n",
-    "trainNeuralNet(syn0, syn1, epochs, lambda x: sigmoid(x), lambda x: sigmoid(x)*(1-sigmoid(x)))\n",
+    "# trainNeuralNet(syn0, syn1, epochs, lambda x: sigmoid(x), lambda x: sigmoid(x)*(1-sigmoid(x)))\n",
+    "trainNeuralNetArrays(synapses, epochs, lambda x: sigmoid(x), lambda x: sigmoid(x)*(1-sigmoid(x)))\n",
     "\n",
     "result = transformTestData(X,syn0,syn1,lambda x: sigmoid(x))\n",
     "# layer1_transform = sigmoid(np.dot(X,syn0))\n",
@@ -101,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -109,11 +135,11 @@
      "output_type": "stream",
      "text": [
       "Performing K-fold cross validation, splits = 5\n",
-      "    MSE:  4.49999997067\n",
-      "    MSE:  2.99999982413\n",
-      "    MSE:  0.999999969645\n",
-      "    MSE:  0.999999960494\n",
-      "    MSE:  1.50000074508\n",
+      "    MSE:  3.99999997882\n",
+      "    MSE:  0.999999981984\n",
+      "    MSE:  2.99999998788\n",
+      "    MSE:  1.00000069577\n",
+      "    MSE:  1.49999985591\n",
       "\n",
       "MSE against Test data:  1.9999999116\n",
       "Accuracy:  0.833333333333\n"
@@ -134,6 +160,8 @@
     "lowest_syn0 = []\n",
     "lowest_syn1 = []\n",
     "\n",
+    "lowest_synapses = None\n",
+    "\n",
     "epochs = 10000\n",
     "\n",
     "print(\"Performing K-fold cross validation, splits = 5\")\n",
@@ -145,15 +173,22 @@
     "    np.random.seed(seed=42)\n",
     "    syn0 = 2*np.random.random((X_train.shape[1],X_train.shape[0])) - 1\n",
     "    syn1 = 2*np.random.random((y_train.shape[0],y_train.shape[1])) - 1\n",
+    "    synapses = [syn0, syn1]\n",
+    "    \n",
+    "    trainNeuralNetArrays(synapses, epochs, lambda x: sigmoid(x), lambda x: sigmoid(x)*(1-sigmoid(x)))\n",
     "\n",
-    "    trainNeuralNet(syn0, syn1, epochs, lambda x: sigmoid(x), lambda x: sigmoid(x)*(1-sigmoid(x)))\n",
-    "\n",
-    "    layer1_transform = sigmoid(np.dot(X_test,syn0))\n",
-    "    result = sigmoid(np.dot(layer1_transform,syn1))\n",
+    "    for i in range(len(synapses)):\n",
+    "        if i==0:\n",
+    "            result = sigmoid(np.dot(X_test,synapses[i]))\n",
+    "        else:\n",
+    "            result = sigmoid(np.dot(result,synapses[i]))\n",
+    "#     layer1_transform = sigmoid(np.dot(X_test,syn0))\n",
+    "#     result = sigmoid(np.dot(layer1_transform,syn1))\n",
     "    mse = 0.5*np.sum((y_test - result)**2)\n",
     "    print(\"    MSE: \",mse)\n",
     "    if (mse < lowest_mse):\n",
     "        lowest_mse = mse\n",
+    "        lowest_synapses = synapses\n",
     "        lowest_syn0 = syn0\n",
     "        lowest_syn1 = syn1\n",
     "        \n",
@@ -161,13 +196,22 @@
     "df[\"Temp\"] = df.transform(lambda x: x - 37)\n",
     "\n",
     "X,y = splitInputOutput(df.as_matrix())\n",
-    "layer1_transform = sigmoid(np.dot(X,lowest_syn0))\n",
-    "result = sigmoid(np.dot(layer1_transform,lowest_syn1))\n",
+    "\n",
+    "for i in range(len(lowest_synapses)):\n",
+    "    if i==0:\n",
+    "        result = sigmoid(np.dot(X,lowest_synapses[i]))\n",
+    "    else:\n",
+    "        result = sigmoid(np.dot(result,lowest_synapses[i]))\n",
+    "\n",
+    "# layer1_transform = sigmoid(np.dot(X,lowest_syn0))\n",
+    "# result = sigmoid(np.dot(layer1_transform,lowest_syn1))\n",
     "mse = 0.5*np.sum((y - result)**2)\n",
     "result = np.double(result > 0.5)\n",
     "print()\n",
     "print(\"MSE against Test data: \",mse)\n",
     "print(\"Accuracy: \",1-np.sum(y-result)/y.shape[0])\n",
+    "\n",
+    "# NOTES: 1 hidden node outperforms accuracy of 2 hidden node of len(X) x len(X) by almost 1.5:1\n",
     "\n"
    ]
   },
