Adding in 'eta' since it was missing in the previous version

--- a/PyhonNeuralNet.ipynb
+++ b/PyhonNeuralNet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -29,18 +29,7 @@
     "def make_sigmoid_prime(x):\n",
     "    return x*(1-x)\n",
     "\n",
-    "# Trivial implementation\n",
-    "def trainNeuralNet(synapse0, synapse1, epochs, activator, activator_prime):\n",
-    "    for j in range(epochs):\n",
-    "        l1 = activator(np.dot(X,synapse0))\n",
-    "        l2 = activator(np.dot(l1,synapse1))\n",
-    "        l2_delta = (y - l2)*activator_prime(np.dot(l1,synapse1))\n",
-    "        l1_delta = l2_delta.dot(synapse1.T) * activator_prime(np.dot(X,synapse0))\n",
-    "        synapse1 += l1.T.dot(l2_delta) #adjust our synapses up or down as necessary\n",
-    "        synapse0 += X.T.dot(l1_delta)\n",
-    "\n",
-    "# Now do it with arrays to generalize it a bit more\n",
-    "def trainNeuralNetArrays(weights, epochs, activator, activator_prime):\n",
+    "def trainNeuralNetArrays(weights, eta, epochs, activator, activator_prime):\n",
     "    n = len(weights)\n",
     "    layers = [None] * n\n",
     "    deltas = [None] * n\n",
@@ -59,9 +48,9 @@
     "                deltas[i] = deltas[i+1].dot(weights[i+1].T)*activator_prime(np.dot(X,weights[i]))\n",
     "        for i in reversed(range(n)): # Back propagation time, start at the last weight and move forward\n",
     "            if i != 0:  # testing !=0 so show we backpropogate back to front {else statement}\n",
-    "                weights[i] += layers[i-1].T.dot(deltas[i])\n",
+    "                weights[i] += eta*layers[i-1].T.dot(deltas[i])\n",
     "            else:\n",
-    "                weights[i] += X.T.dot(deltas[i])\n",
+    "                weights[i] += eta*X.T.dot(deltas[i])\n",
     "        \n",
     "def transformTestData(x, syn0, syn1, func):\n",
     "    layer1_transform = func(np.dot(x,syn0))\n",
@@ -72,50 +61,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test our neural network trainer against a simple dataset: X will contain binary tuples and Y will be the XOR result of rows in X."
+    "Test our neural network trainer against a simple dataset: X will contain binary pairs and Y will be the XOR result of rows in X.  We will initialize a random dataset of 0's and 1's with length 20 for A and B (X) and XOR the result for our y."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE:  0.000477306752279\n",
-      "Output of predicted y (2nd and 3rd rows should be close to 1):\n",
-      "[[ 0.01869055]\n",
-      " [ 0.98941286]\n",
-      " [ 0.98293159]\n",
-      " [ 0.0142077 ]]\n"
+      "Performing K-fold cross validation, splits = 5\n",
+      "    MSE:  0.000473691424228\n",
+      "    MSE:  0.000402454142081\n",
+      "    MSE:  0.00066181651387\n",
+      "    MSE:  0.000532135327975\n",
+      "    MSE:  0.000895891246303\n",
+      "X_test:  [[ 1.  1.]\n",
+      " [ 0.  1.]\n",
+      " [ 1.  1.]\n",
+      " [ 0.  0.]\n",
+      " [ 1.  1.]]\n",
+      "Y_test:  [[0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]]\n",
+      "Y_pred:  [[ 0.01916215]\n",
+      " [ 0.98792081]\n",
+      " [ 0.01916215]\n",
+      " [ 0.0201313 ]\n",
+      " [ 0.01916215]]\n",
+      "\n",
+      "MSE against Test data:  0.000826370048276\n",
+      "Accuracy:  0.982060612017\n"
      ]
     }
    ],
    "source": [
-    "# trivial dataset\n",
-    "X, y = getData('data/prepared/trivial.csv')\n",
+    "np.random.seed(42)\n",
+    "a = np.random.randint(0,2,20) # gen a bunch of random numbers either 0 or 1\n",
+    "b = np.random.randint(0,2,20) # do it again\n",
+    "c = a ^ b #set C to be the XOR result of A XOR B\n",
+    "X, y = splitInputOutput(np.asmatrix([a,b,c]).T)\n",
     "\n",
-    "# X = np.array([ [0,0],[0,1],[1,0],[1,1] ])\n",
-    "# y = np.array([[0,1,1,0]]).T # XOR(X)\n",
+    "kf = KFold(n_splits=5,random_state=None, shuffle=False) #our dataset was already random, no need to shuffle\n",
     "\n",
-    "np.random.seed(seed=42)\n",
-    "syn0 = 2*np.random.random((X.shape[1],X.shape[0])) - 1\n",
-    "syn1 = 2*np.random.random((y.shape[0],y.shape[1])) - 1\n",
-    "synapses = [syn0, syn1]\n",
+    "lowest_mse = 1e8 #arbitrary high value\n",
+    "lowest_syn0 = []\n",
+    "lowest_syn1 = []\n",
+    "\n",
+    "lowest_synapses = None\n",
+    "\n",
+    "eta = 0.1\n",
     "epochs = 10000\n",
     "\n",
-    "# trainNeuralNet(syn0, syn1, epochs, lambda x: sigmoid(x), lambda x: sigmoid(x)*(1-sigmoid(x)))\n",
-    "trainNeuralNetArrays(synapses, epochs, lambda x: sigmoid(x), lambda x: sigmoid(x)*(1-sigmoid(x)))\n",
+    "print(\"Performing K-fold cross validation, splits = 5\")\n",
+    "# do our cross validation with training data\n",
+    "for train_index, test_index in kf.split(X):\n",
+    "    X_train, X_test = X[train_index], X[test_index]\n",
+    "    y_train, y_test = y[train_index], y[test_index]\n",
     "\n",
-    "result = transformTestData(X,syn0,syn1,lambda x: sigmoid(x))\n",
-    "# layer1_transform = sigmoid(np.dot(X,syn0))\n",
-    "# result = sigmoid(np.dot(layer1_transform,syn1))\n",
+    "    np.random.seed(seed=42)\n",
+    "    syn0 = 2*np.random.random((X_train.shape[1],X_train.shape[0])) - 1\n",
+    "    syn1 = 2*np.random.random((y_train.shape[0],y_train.shape[1])) - 1\n",
+    "    synapses = [syn0, syn1]\n",
+    "    \n",
+    "    trainNeuralNetArrays(synapses, eta, epochs, lambda x: sigmoid(x), lambda x: sigmoid(x)*(1-sigmoid(x)))\n",
     "\n",
-    "print(\"MSE: \",0.5*np.sum((y - result)**2))\n",
-    "print(\"Output of predicted y (2nd and 3rd rows should be close to 1):\")\n",
-    "print(result)\n"
+    "    for i in range(len(synapses)):\n",
+    "        if i==0:\n",
+    "            result = sigmoid(np.dot(X_test,synapses[i]))\n",
+    "        else:\n",
+    "            result = sigmoid(np.dot(result,synapses[i]))\n",
+    "\n",
+    "    mse = 0.5*np.sum((y_test - result)**2)\n",
+    "    print(\"    MSE: \",mse)\n",
+    "    if (mse < lowest_mse):\n",
+    "        lowest_mse = mse\n",
+    "        lowest_synapses = synapses\n",
+    "        lowest_syn0 = syn0\n",
+    "        lowest_syn1 = syn1\n",
+    "        \n",
+    "\n",
+    "#gen more random data for test set\n",
+    "np.random.seed(7)\n",
+    "a = np.random.randint(0,2,5) \n",
+    "b = np.random.randint(0,2,5)\n",
+    "c = a ^ b\n",
+    "X, y = splitInputOutput(np.asmatrix([a,b,c]).T)\n",
+    "\n",
+    "# apply the weights\n",
+    "for i in range(len(lowest_synapses)):\n",
+    "    if i==0:\n",
+    "        result = sigmoid(np.dot(X,lowest_synapses[i]))\n",
+    "    else:\n",
+    "        result = sigmoid(np.dot(result,lowest_synapses[i]))\n",
+    "\n",
+    "mse = 0.5*np.sum((y - result)**2)\n",
+    "print (\"X_test: \",X)\n",
+    "print (\"Y_test: \",y)\n",
+    "print (\"Y_pred: \",result)\n",
+    "print()\n",
+    "print(\"MSE against Test data: \",mse)\n",
+    "print(\"Accuracy: \",1-np.sum(np.abs(y-result))/y.shape[0])"
    ]
   },
   {
@@ -127,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -135,14 +186,14 @@
      "output_type": "stream",
      "text": [
       "Performing K-fold cross validation, splits = 5\n",
-      "    MSE:  3.99999997882\n",
-      "    MSE:  0.999999981984\n",
-      "    MSE:  2.99999998788\n",
-      "    MSE:  1.00000069577\n",
-      "    MSE:  1.49999985591\n",
+      "    MSE:  8.24976336748e-05\n",
+      "    MSE:  9.70778642222e-05\n",
+      "    MSE:  5.6819720276e-05\n",
+      "    MSE:  8.78963118942e-05\n",
+      "    MSE:  3.06015703821e-05\n",
       "\n",
-      "MSE against Test data:  1.9999999116\n",
-      "Accuracy:  0.833333333333\n"
+      "MSE against Test data:  9.83419583742e-05\n",
+      "Accuracy:  1.0\n"
      ]
     }
    ],
@@ -175,7 +226,7 @@
     "    syn1 = 2*np.random.random((y_train.shape[0],y_train.shape[1])) - 1\n",
     "    synapses = [syn0, syn1]\n",
     "    \n",
-    "    trainNeuralNetArrays(synapses, epochs, lambda x: sigmoid(x), lambda x: sigmoid(x)*(1-sigmoid(x)))\n",
+    "    trainNeuralNetArrays(synapses, 0.1, epochs, lambda x: sigmoid(x), lambda x: sigmoid(x)*(1-sigmoid(x)))\n",
     "\n",
     "    for i in range(len(synapses)):\n",
     "        if i==0:\n",
@@ -214,15 +265,6 @@
     "# NOTES: 1 hidden node outperforms accuracy of 2 hidden node of len(X) x len(X) by almost 1.5:1\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
