--- a/PyhonNeuralNet.ipynb
+++ b/PyhonNeuralNet.ipynb
@@ -213,6 +213,7 @@
     "\n",
     "lowest_synapses = None\n",
     "\n",
+    "eta = 0.1\n",
     "epochs = 10000\n",
     "\n",
     "print(\"Performing K-fold cross validation, splits = 5\")\n",
